@@ -1,7 +1,7 @@
 Package: diagmeta
 Title: Meta-Analysis of Diagnostic Accuracy Studies with Several Cutpoints
-Version: 0.3-1
-Date: 2019-04-11
+Version: 0.3-2
+Date: 2019-05-03
 Depends: meta (>= 4.9-0)
 Imports: lme4, grDevices
 Authors@R: c(person("Gerta", "Rücker",
